
    o	print.atomic() is now deprecated.

    o	The back-compatibility entry point Rf_log1p in standalone
	Rmath has been removed.


BUG FIXES

    o	numericDeriv() was failing if the first argument was a name
	rather than a call.  (PR#3746)

    o   bgroup with a null (.) delimiter was setting font to Greek.
        (PR#3099)

    o	cut.POSIXt() now passes on ... to cut.default(), as documented.

    o	seq.POSIXt(from, to, by="DSTday") was failing or calculating
	the length incorrectly.

    o	On some machines the internal rounding used in postscript() was
	imperfect, causing unnecessarily verbose output (-0.00 instead of
	0) and problems with make check.

    o	pacf() was failing if called on a one-column matrix.

    o	$<- did not duplicate when it needed to.

    o	methods("$") and methods("$<-") were failing to find methods.

    o	Recursive indexing of lists had too little error-checking.
	(related to PR#3324)

    o	get() and exists() were ignoring the `mode' argument for
	variables in base.  The error message for get() now mentions
	the mode requested if not "any".  A bug in setting the NAMED
	field in do_get was fixed.

    o	Removed warning about names in persistent strings when a
	namespace is saved.

    o	The apparently never used `method' argument to loess() did not
	work.  (PR#3332)

    o	Fixed some malformed error messages in methods package.

    o	plot.POSIX[cl]t no longer passes col, lty, lwd to axis.POSIXt.

    o	lsfit() was returning incorrect residuals for 0-rank fits.

    o   pipes were not opening properly when profiling on a Mac (PR#1140)

    o	sort() and unique.default() were failing on 0-level factors.

    o	sapply() for matrix result does not return list(NULL,NULL) dimnames
	anymore.

    o	lm.influence() called on a 0-rank fit either crashed or produced
	incorrect output.

    o	str(x) gives better output when x is of mode "(".

    o	Lapack error messages (PR#3494) and call to DGEQP3 (PR#2867) are
	corrected.
