@@ -10,6 +10,12 @@ identify.default <- function(x, y=NULL, labels=seq(along=x), pos=FALSE,
     xy <- xy.coords(x, y)
     x <- xy$x
     y <- xy$y
+    if (length(x)==0){
+        if (pos)
+            return(list(ind=numeric(0), pos=numeric(0)))
+        else
+            return(numeric(0))
+    }
     z <- .Internal(identify(x, y, as.character(labels), n, plot, offset))
     i <- seq(z[[1]])[z[[1]]]
     if(pos) list(ind = i, pos = z[[2]][z[[1]]]) else i
